fixed home screen alignment

--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -4,15 +4,9 @@
     font-size: 80px;
     padding-left: 80px;
     padding-top: 50px;
-    margin-left: 190px;
 }
 
 .Logo {
-    margin-left: 515px;
-    margin-top: 10px;
     height: 200px;
     width: 200px;
-    display: flex; 
-    flex-direction: row;
-    vertical-align: middle;
 }
